--- a/Assets/css/sytles.css
+++ b/Assets/css/sytles.css
@@ -78,40 +78,31 @@ header > figcaption {
     position: relative;
 }
 
-/* main {
+.about-me, .contact {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: 1500px;
-} */
-
-.about-me {
-    height: 300px;
-    /* border: 5px solid black; */
-    display: flex;
-    flex-direction: row;
+    align-items: stretch;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 25px;
     font-size: 30px;
 }
 
-.about-me > aside {
+.about-me > aside, .contact > aside {
     border-right: 5px solid var(--dark);
     width: 10%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     align-items: center;
     padding-right: 5px;
     max-height: 300px;
-    /* min-width: 400px; Keep for now*/
+    text-align: right;
 }
 
-.about-me > div {
+.about-me > div, .contact > div {
     display: flex;
     align-items: center;
-    /* border: 5px solid white; */
     width: 80%;
 }
 
@@ -122,8 +113,6 @@ header > figcaption {
 }
 
 .work {
-    height: 750px;
-    /* border: 5px solid black; */
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -135,7 +124,6 @@ header > figcaption {
 }
 
 .work > aside {
-    height: 750px;
     border-right: 5px solid var(--dark);
     width: 10%;
     display: flex;
@@ -143,7 +131,6 @@ header > figcaption {
     align-items: center;
     padding-right: 5px;
     flex-shrink: 1;
-    /* min-width: 400px; Keep for now*/
 }
 
 .project-container {
@@ -201,8 +188,123 @@ header > figcaption {
     font-size: 15px;
 }
 
+.contact {
+    margin-bottom: 25px;
+}
+
+.contact > div  {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.contact > div > ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 80%;
+}
+
+a {
+    text-align: center;
+    color: black;
+}
+
 @media (max-width: 768px) {
     header > figcaption {
         font-size: 10px;
     }
-  }
+
+    .about-me {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .about-me > aside, .contact > aside {
+        display: flex;
+        justify-content: center;
+        width: 30%;
+        padding: 0px;
+        border: 0px;
+        border-bottom: 5px solid var(--dark);
+        min-width: 175px;
+    }
+
+    .about-me > aside > h1,
+    .contact > aside > h1 {
+        margin-bottom: -10px;
+    }
+
+    .contact > aside {
+        min-width: 205px;
+    }
+
+    .contact > aside > h1 {
+        min-width: 205px;
+    }
+    
+    .contact > div > ul {
+        /* display: block; */
+        list-style: none;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        /* flex-wrap: wrap; */
+        /* flex-shrink: 1; */
+        width: 80%;
+        height: 225px;
+        padding: 0px;
+        margin: 25px 0px;
+    }
+
+    .work {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .work > aside {
+        display: flex;
+        justify-content: center;
+        width: 20%;
+        padding: 0px;
+        border: 0px;
+        border-bottom: 5px solid var(--dark);
+        min-width: 90px;
+    }
+    .work > aside > h1 {
+        margin-bottom: -10px;
+        flex-shrink: 1;
+    }
+
+    }
+
+    @media (max-width: 485px) {
+        .work {
+            margin-top: 200px;
+        }
+        li {
+            font-size: 20px;
+        }
+    }
+
+    @media (max-width: 350px) {
+        .work {
+            margin-top: 300px;
+        }
+    }
+
+    @media (max-width: 310px) {
+        .work {
+            margin-top: 400px;
+        }
+    }
